# inspect_viz

./: .gitignore  .prettierignore  .prettierrc  Makefile  README.md  example.ipynb  package-lock.json  package.json  pyproject.toml  tsconfig.json
examples/: example.qmd  layout.json  notebook.ipynb  parse_sql.ipynb  penguins.qmd  plotly.qmd  scratch.ipynb  sqlglot.ipynb
examples/bias-parameter/: bias-parameter.qmd
examples/olympic-athletes/: olympic-athletes.qmd
examples/penguins/: penguins.qmd
examples/seattle-weather/: seattle-weather.json  seattle-weather.qmd
js/: figure_view.css  figure_view.ts  figure_view.tsx  index.ts  shared_df.ts  shared_df.tsx  widget.css  widget.tsx
js/@types/: duckdb-url.d.ts
js/clients/: figure.ts  figure_view.ts  table.ts  table_view.ts  viz_client.ts
js/context/: duckdb.ts  index.ts
js/coordinator/: convert.ts  coodinator.ts  data.ts  dataframe.ts  duckdb.ts  index.ts  param.ts  query.ts  reactive_df.ts  select.ts
js/inputs/: RadioInput.ts  index.ts  input.ts  radio.ts  types.ts
js/store/: index.ts  mosaic.ts  shared.ts
js/types/: arquero-cdn.d.ts  arquero-url.d.ts  duckdb-url.d.ts  mosaic-url.d.ts  plotly-cdn.d.ts  plotly-url.d.ts
js/util/: binding.ts  errors.ts  modal.ts  wait.ts
js/widgets/: data.ts  dataframe.ts  datatable.ts  figure.ts  figure_view.ts  menu.ts  menu_input.ts  mosaic.ts  plot.ts  reactive_df.ts  shared_df.ts  slider.ts  slider_input.ts  spec.ts  table.ts  table_view.ts
src/inspect_analysis/: __init__.py
src/inspect_analysis/_util/: constants.py
src/inspect_analysis/dashboard/: __init__.py  _dependencies.py  _figure_view.py  _shared_df.py
src/inspect_analysis/static/: figure_view.js
src/inspect_viz/: __init__.py  _constants.py  _data.py
src/inspect_viz/_core/: __init__.py  _component.py  _data.py  _mark_options.py  _mosaic.py  _param.py  _selection.py  _widget.py  component.py  data.py  param.py  selection.py
src/inspect_viz/_data/: dataframe.py  param.py  query.py  reactive_df.py
src/inspect_viz/_dataframe/: dataframe.py  parse_sql.py  query.py  valdidate.py
src/inspect_viz/_input/: __init__.py  menu.py  radio.py  select.py  slider.py  table.py
src/inspect_viz/_inputs/: menu.py  slider.py
src/inspect_viz/_layout/: __init__.py  concat.py  space.py
src/inspect_viz/_param/: param.py
src/inspect_viz/_plot/: __init__.py  bar.py  brush.py  channel.py  defaults.py  dot.py  interactors.py  legend.py  line_y.py  mark.py  options.py  plot.py  spec.py  types.py
src/inspect_viz/_table/: table.py
src/inspect_viz/_util/: _constants.py  casing.py
src/inspect_viz/_views/: figure.py  line_y.py  plot.py  scatterplot.py  table.py
src/inspect_viz/_widgets/: data.js  data.py  figure_view.py  menu.js  menu.py  menu_input.py  (+12 more)
tests/data/: test_execute_query.py  test_parse_sql.py
tests/mosaic/: conftest.py  test_component_wrappers.py  test_input_wrappers.py  test_interactor_wrappers.py  test_layout_wrappers.py  test_mark_wrappers.py  test_plot_wrappers.py  test_transform_wrappers.py  utils.py
(+104 files in other folders)
