[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inspect_analysis"
version = "0.0.1"
dependencies = [
    "ipython",
    "shortuuid",
    "anywidget>=0.9",
    "traitlets",
    "narwhals>=1.15.1",
    "pyarrow>=15.0.0",
    "plotly[express]>=6.0.0",
]
readme = "README.md"

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab", "quarto-cli", "pandas"]

[tool.hatch.build]
only-packages = true
artifacts = ["src/inspect_analysis/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "src/inspect_analysis/static/shared_df.js", 
    "src/inspect_analysis/static/figure_view.js"
]
skip-if-exists = ["src/inspect_analysis/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
