[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inspect_analysis"
version = "0.0.1"
dependencies = [
    "ipython",
    "shortuuid",
    "anywidget>=0.9",
    "traitlets",
    "narwhals>=1.15.1",
    "pyarrow>=15.0.0",
    "plotly[express]>=6.0.0",
]
readme = "README.md"

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab", "quarto-cli", "pandas"]

[tool.hatch.build]
only-packages = true

