[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inspect_viz"
version = "0.0.1"
authors = [{ name = "Meridian Labs" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
dependencies = [
    "ipython",
    "shortuuid",
    "anywidget>=0.9.0",
    "traitlets",
    "narwhals>=1.15.1",
    "pyarrow>=15.0.0",
    "plotly[express]>=6.0.0",
    "sqlglot>=26.0.0"
]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = [
    "watchfiles",
    "jupyterlab",
    "quarto-cli",
    "pandas",
    "ruff",
    "mypy",
    "pandas-stubs",
    "plotly-stubs"
]

[tool.hatch.build]
only-packages = true


[tool.ruff]
extend-exclude = ["docs"]
src = ["."]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # flake8
    "D",      # pydocstyle
    "I",      # isort
    "B",      # flake8-bugbear
    "SIM101", # duplicate isinstance
    # "RET", # flake8-return
    # "RUF", # ruff rules
]
ignore = ["E203", "E501", "D10", "D212", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_executable = ".venv/bin/python3"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true